--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.6",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "pre-commit": "^1.2.2",
@@ -23,9 +24,12 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
-  "pre-commit":[
+  "pre-commit": [
     "ts.check",
     "build",
     "add-build"
-  ]
+  ],
+  "devDependencies": {
+    "@types/cors": "^2.8.17"
+  }
 }
